# Cpp_homeworks

./: README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  README.md  build.sh  cmake_build.sh  test_ipb_arithmetic
homework_1/task_2/src/: CMakeLists.txt  main.cpp
homework_2/task_1/: CMakeLists.txt  build.sh  guessing_game.cpp
homework_2/task_2/: CMakeLists.txt  build.sh  task_2.cpp
homework_3/: CMakeLists.txt  build.sh  remove.sh  test_build.sh
homework_3/api/: homework_3.h  html_writer.hpp  image_browser.hpp
homework_3/src/: CMakeLists.txt  html_writer.cpp  image_browser.cpp  main.cpp  saved_code.txt  test.html
homework_4/: main
homework_6/: CMakeLists.txt  build.sh  test.cpp
homework_6/include/: homework_6.h  image_class.hpp
homework_6/src/: CMakeLists.txt  image_class.cpp  main.cpp
